--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,28 @@ html {
     30% 0%
   );
 }
+
+/* Slideshow */
+.slideshow {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.slideshow div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 3s;
+}
+
+.slideshow div.change {
+  opacity: 1;
+}
