--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ html {
   width: 30rem;
   height: 55rem;
   transform-style: preserve-3d;
-  transform: rotateY(91deg);
+  transition: transform 0.5s;
   position: relative;
   top: -2rem;
 }
